--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </p>
     </section>
     <section class="rating">
-      <div class="rating-box">
+      <div class="rating-box rt-1">
         <div class="stars">
           <img src="images/icon-star.svg" alt="">
           <img src="images/icon-star.svg" alt="">
@@ -36,7 +36,7 @@
           Rated 5 Stars in Reviews
         </p>
       </div>
-      <div class="rating-box">
+      <div class="rating-box rt-2">
         <div class="stars">
           <img src="images/icon-star.svg" alt="">
           <img src="images/icon-star.svg" alt="">
@@ -48,7 +48,7 @@
           Rated 5 Stars in Report Guru
         </p>
       </div>
-      <div class="rating-box">
+      <div class="rating-box rt-3">
         <div class="stars">
           <img src="images/icon-star.svg" alt="">
           <img src="images/icon-star.svg" alt="">
@@ -62,7 +62,7 @@
       </div>
     </section>
     <section class="comment">
-      <div class="comment-box">
+      <div class="comment-box cm-1">
         <div class="profile">
           <img src="images/image-colton.jpg" alt="profile-colton">
           <h2>
@@ -78,7 +78,7 @@
           Excellent!"
         </p>
       </div>
-      <div class="comment-box">
+      <div class="comment-box cm-2">
         <div class="profile">
           <img src="images/image-irene.jpg" alt="profile-irene">
           <h2>
@@ -93,7 +93,7 @@
           delighted with the simplicity of the purchase and the speed of delivery."
         </p>
       </div>
-      <div class="comment-box">
+      <div class="comment-box cm-3">
         <div class="profile">
           <img src="images/image-anne.jpg" alt="profile-anne">
           <h2>
@@ -112,8 +112,7 @@
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
-        href="#">Your
-        Name Here</a>.
+        href="#">airbahh</a>.
     </div>
   </div>
 </body>
